[package]
name = "pricer_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-cors = "0.5"
rocket = "=0.5.0-rc.3"
rocket_codegen = "0.4.10" 
rocket_cors = "0.5.0"
ethers = "2.0.8"